# ringolo

./: .gitignore  Cargo.toml  IoUring.h  IoUringBase.h  README.md  notes.md
.github/workflows/: rust.yml
ringolo/: Cargo.toml  README.md
ringolo-macros/: Cargo.toml  LICENSE  README.md
ringolo-macros/src/: entry.rs  lib.rs  parse.rs
ringolo/src/: lib.rs
ringolo/src/context/: buffer_pool.rs  core.rs  mod.rs  ring.rs  shared.rs  slab.rs  slots.rs
ringolo/src/context/maintenance/: cleanup.rs  mod.rs  queue.rs  task.rs
ringolo/src/future/: mod.rs  opcodes.rs
ringolo/src/future/experimental/: mod.rs
ringolo/src/future/experimental/net/: mod.rs  socket.rs  tcp.rs
ringolo/src/future/experimental/time/: mod.rs  sleep.rs  tick.rs  yield_now.rs
ringolo/src/future/lib/: buffer.rs  errors.rs  fd.rs  list.rs  list_macros.rs  mod.rs  multishot.rs  parse.rs  single.rs  sockopt.rs  types.rs
ringolo/src/future/lib/ops/: mod.rs  multishot.rs  single.rs  sockopt.rs
ringolo/src/future/opcode/: builder.rs  common.rs  errors.rs  mod.rs  multishot.rs  parse.rs  single.rs
ringolo/src/protocol/: mailbox.rs  state.rs
ringolo/src/runtime/: builder.rs  cancel.rs  cleanup.rs  mod.rs  registry.rs  runtime.rs  spawn.rs  ticker.rs  waker.rs
ringolo/src/runtime/local/: context.rs  mod.rs  scheduler.rs  tests.rs  worker.rs
ringolo/src/runtime/stealing/: context.rs  mod.rs  pool.rs  root_worker.rs  scheduler.rs  tests.rs  worker.rs
ringolo/src/sqe/: errors.rs  list.rs  message.rs  mod.rs  raw.rs  single.rs  stream.rs
ringolo/src/task/: abort.rs  error.rs  harness.rs  header.rs  id.rs  join.rs  layout.rs  mod.rs  node.rs  raw.rs  state.rs  task.rs  trailer.rs  waker.rs
ringolo/src/test_utils/: context.rs  future.rs  mocks.rs  mod.rs  spy.rs
ringolo/src/util/: mod.rs  scope_guard.rs
ringolo/src/utils/: io_uring.rs  mod.rs  scheduler.rs  scope_guard.rs  sync_wrapper.rs  sys.rs  thread.rs
src/: base.rs  iouring.rs  lib.rs
src/base/: iobase.rs
src/context/: global.rs  local.rs  mod.rs  ring.rs  slab.rs
src/future/: opcodes.rs
src/iobase/: ring.rs  types.rs
src/iouring/: ring.rs  types.rs  worker.rs
src/ioworker/: base.rs  mod.rs
src/protocol/: mailbox.rs  message.rs  mod.rs
src/runtime/: runtime.rs
src/runtime/stealing/: mod.rs  scheduler.rs  worker.rs
src/sqe/: list.rs  message.rs  mod.rs  raw.rs  single.rs  stream.rs
src/task/: abort.rs  error.rs  harness.rs  header.rs  id.rs  join.rs  layout.rs  mod.rs  raw.rs  task.rs  trailer.rs  vtable.rs  waker.rs
src/test_utils/: mocks.rs  mod.rs
