[package]
name = "tokio-iouring"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { version = "0.2.98", default-features = false }
anyhow = "^1.0.99"
# io-uring = "^0.7.10"
io-uring = { git = "https://github.com/sugarraysam/io-uring.git", branch = "origin/expose-enter-flags" }
either = "^1.15.0"
async-trait = "^0.1.89"
crossbeam-queue = "^0.3.12"
slab = "0.4.11"
rstest = "0.26.1"
paste = "1.0.15"
futures = "0.3.31"
thiserror = "2.0.17"

[lib]
doctest = false
