[package]
name = "ringolo-macros"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.89"
authors = ["Samuel Blais-Dowdy <samuel.blaisddowdy@protonmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sugarraysam/ringolo"
description = "Ringolo proc macros."
categories = ["asynchronous", "network-programming"]
keywords = ["io-uring", "io", "async", "non-blocking", "futures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "~1.0.101"
quote = "~1.0.41"
syn = { version = "~2.0.106", features = ["full"] }

[dev-dependencies]
ringolo = "~0.1.0-alpha.1"
